deploy/ingress/rabbitmq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ui
  namespace: sentryk8s
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: rabbitmq.local.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sentryk8s-rabbitmq
                port:
                  number: 15672
